@@ -1,0 +1,25 @@
+;;
+;; read from theme.cpp test
+;;
+
+(theme.name   "Demo")
+(theme.author "John Foo <john@foo.com>")
+(theme.sample "img.jpg")
+
+(define (incrementor n)
+ (+ n 1))
+
+(theme.style "test style"
+[
+  (item1   "value 1")
+  ;; a comment
+  (item2   "value 2")
+  (item3   123)
+  (item4   (incrementor 4))
+])
+
+(theme.style "test_style2"
+[
+  (item1   34)
+  (item1   "you should get this")
+])
